--- a/index.html
+++ b/index.html
@@ -6,16 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
+    <link rel="stylesheet" href="assets/CSS/style.css" type="text/css" />
     <title>My Resume</title>
 </head>
 <body>
     <header>
         <div class="row">
-            <div class="col-md-4">
-                
-            </div>
+            <a href="index.html">
+            <div class="col-md-4 logo"></div>
+            </a>
             <div class="col-md-8">
-                
+                <div class="row bg-color-name-title">
+                    <div class="heading">
+                        <h1 class="name">
+                            Salvatore Fiengo
+                        </h1>
+                        <h2 class="title">
+                            Full Stack Developer
+                        </h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <ul id="nav" class="list-inline clearfix">
+                        <li class="col-xs-6 col-sm-3 ui-menu-color-home menu-item">
+                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a></li>
+                        <li class="col-xs-6 col-sm-3 ui-menu-color-resume menu-item">
+                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a></li>
+                        <li class="col-xs-6 col-sm-3 ui-menu-color-contact menu-item">
+                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a></li>
+                        <li class="col-xs-6 col-sm-3 ui-menu-color-download menu-item">
+                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download Cv</span></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
