--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>My Resume</title>
 </head>
 <body>
-    <header>
+    <header class="container-fluid">
         <div class="row">
             <a href="index.html">
             <div class="col-md-4 logo"></div>
@@ -45,8 +45,36 @@
     <section>
         
     </section>
-    <footer>
-        
+    <footer class="container-fluid">
+        <div id="footer-details" class="row">
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">About</h5>
+                <p class="inline-block">
+                    Full Stack Developer. Skilled in everything from HTML to Heroku.
+                    The Capacity for structural and design thinking.
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">download my cv</h5>
+                <p class="inline-block">
+                    Need a printable version of my CV? Download it here.
+                    <a href="#" class="cv-pdf"><i class="fa fa-download" aria-hidden="true"></i></a>
+                </p>
+            </div>
+            <div class="col-sm-4">
+                <h5 class="uppercase general-sub">my social</h5>
+                <p class="inline-block">
+                    <ul class="list-inline social-links">
+                        <li><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a target="_blank" href="#"><i class="fa fa-pinterest"></i></a></li>
+                        <li><a target="_blank" href="#"><i class="fa fa-instagram"></i></a></li>
+                        <li><a target="_blank" href="#"><i class="fa fa-youtube"></i></a></li>
+                    </ul>
+                </p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
