--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="container-fluid">
         <div class="row">
             <a href="index.html">
-            <div class="col-md-4 logo"></div>
+                <div class="col-md-4 logo"></div>
             </a>
             <div class="col-md-8">
                 <div class="row bg-color-name-title">
@@ -42,7 +42,103 @@
             </div>
         </div>
     </header>
-    <section>
+    <section class="container-fluid">
+        <div class="row row-table">
+            <div class="col-xs-12 col-sm-12 col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="section-heading uppercase">Personal info</h3>
+                    </div>
+                    <div class="personal-info-item">
+                        <div class="key">
+                            <p class="uppercase">Name:</p>
+                        </div>
+                        <div class="value">
+                            <p class="uppercase">Salvatore Fiengo</p>
+                        </div>
+                    </div>
+                    <div class="personal-info-item">
+                        <div class="key">
+                            <p class="uppercase">Address:</p>
+                        </div>
+                        <div class="value">
+                            <p class="uppercase">17 Riverdale, Catskills, NY USA</p>
+                        </div>
+                    </div>
+                    <div class="personal-info-item">
+                        <div class="key">
+                            <p class="uppercase">Phone:</p>
+                        </div>
+                        <div class="value">
+                            <p class="uppercase">555 785 1037225</p>
+                        </div>
+                    </div>
+                    <div class="personal-info-item">
+                        <div class="key">
+                            <p class="uppercase">Email:</p>
+                        </div>
+                        <div class="value">
+                            <p class="uppercase">Salv.fiengo@hansow.com</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-8 bg-color-three-reasons section-column">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="section-heading uppercase">
+                            About me
+                        </h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sx-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-xs-2 col-sm-2 col-md-2">
+                                <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-xs-10 col-sm-10">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p>
+                                    I'm a skilled Full Stack Developer with a wealth of diverse
+                                    life and technical experience that I bring to every project.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sx-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-xs-2 col-sm-2 col-md-2">
+                                <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-xs-10 col-sm-10">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p>
+                                    I follow form as well as function.
+                                    I know that the aesthetics of effective design combined with application speed,
+                                    security and reliability combine to create a great user experience.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sx-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-xs-2 col-sm-2 col-md-2">
+                                <i class="three-reasons-icon fa fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-xs-10 col-sm-10">
+                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                                <p>
+                                    I work quickly abd effectively in getting things built and working across the stack.
+                                    I'm an exellent communicator who trives in bright and enthusiastic teams
+                                    and I'm also a self starter when working solo.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         
     </section>
     <footer class="container-fluid">
