--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <div class="row">
                     <ul id="nav" class="list-inline clearfix">
                         <li class="col-xs-6 col-sm-3 ui-menu-color-home menu-item">
-                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a></li>
+                            <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a></li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-resume menu-item">
-                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a></li>
+                            <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a></li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-contact menu-item">
                             <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a></li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-download menu-item">
@@ -112,7 +112,7 @@
                                 <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
                             </div>
                             <div class="col-xs-10 col-sm-10">
-                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
                                 <p>
                                     I follow form as well as function.
                                     I know that the aesthetics of effective design combined with application speed,
